<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textColor="@color/primary_text_color"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/roomIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_room_id_hint"
        android:layout_below="@id/title"
        android:layout_marginBottom="16dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"/>

    <Button
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_room_id_btn"
        android:layout_below="@id/roomIdInput"
        android:layout_marginBottom="8dp"
        android:background="@color/button_color"/>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_btn"
        android:layout_below="@id/generateButton"
        android:layout_marginBottom="8dp"
        android:background="@color/button_color"
        android:enabled="false"/>

</RelativeLayout>