<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/muteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mute_btn"
            android:background="@color/button_color"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/disableVideoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_off_btn"
            android:background="@color/button_color"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/leaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_menu_btn"
            android:background="@color/button_color"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/menu_btn"/>

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

</RelativeLayout>